[gd_scene load_steps=10 format=3 uid="uid://l6uwiho1cibb"]

[ext_resource type="Script" path="res://Main.gd" id="1_a0gqg"]
[ext_resource type="FontFile" uid="uid://7ww1d3ya1rvs" path="res://static/UbuntuMono-R.ttf" id="2_jr5mf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ddm3"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gjfmx"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3caog"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_swxk6"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dlpdu"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 1)

[sub_resource type="Theme" id="Theme_q10dk"]
Button/styles/disabled = SubResource("StyleBoxFlat_8ddm3")
Button/styles/focus = SubResource("StyleBoxFlat_gjfmx")
Button/styles/hover = SubResource("StyleBoxFlat_3caog")
Button/styles/normal = SubResource("StyleBoxFlat_swxk6")
Button/styles/pressed = SubResource("StyleBoxFlat_dlpdu")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jhyo4"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0

[node name="Main" type="ScrollContainer"]
offset_right = 960.0
offset_bottom = 540.0
theme = SubResource("Theme_q10dk")
theme_override_styles/panel = SubResource("StyleBoxEmpty_jhyo4")
script = ExtResource("1_a0gqg")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="PT" type="MarginContainer" parent="VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="PL" type="MarginContainer" parent="VBox/HBox"]
layout_mode = 2

[node name="Div" type="MarginContainer" parent="VBox/HBox"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="VBox/HBox/Div"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="VBox/HBox/Div/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Menu" type="VBoxContainer" parent="VBox/HBox/Div/VBox/HBox"]
layout_mode = 2

[node name="NewButton" type="Button" parent="VBox/HBox/Div/VBox/HBox/Menu"]
custom_minimum_size = Vector2(32, 32)
layout_direction = 1
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_jr5mf")
text = "+"

[node name="UpButton" type="Button" parent="VBox/HBox/Div/VBox/HBox/Menu"]
custom_minimum_size = Vector2(32, 32)
layout_direction = 1
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_jr5mf")
text = "^"

[node name="LeftButton" type="Button" parent="VBox/HBox/Div/VBox/HBox/Menu" node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(32, 32)
layout_direction = 1
layout_mode = 2
size_flags_vertical = 4
shortcut_context = NodePath("")
theme_override_fonts/font = ExtResource("2_jr5mf")
text = "<"

[node name="RightButton" type="Button" parent="VBox/HBox/Div/VBox/HBox/Menu"]
custom_minimum_size = Vector2(32, 32)
layout_direction = 1
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_jr5mf")
text = ">"

[node name="DownButton" type="Button" parent="VBox/HBox/Div/VBox/HBox/Menu"]
custom_minimum_size = Vector2(32, 32)
layout_direction = 1
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_jr5mf")
text = "v"

[node name="DeleteButton" type="Button" parent="VBox/HBox/Div/VBox/HBox/Menu"]
custom_minimum_size = Vector2(32, 32)
layout_direction = 1
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_jr5mf")
text = "-"

[node name="PR" type="MarginContainer" parent="VBox/HBox"]
layout_mode = 2

[node name="PB" type="MarginContainer" parent="VBox"]
layout_mode = 2

[connection signal="button_down" from="VBox/HBox/Div/VBox/HBox/Menu/NewButton" to="." method="_on_new_button_button_down"]
[connection signal="button_down" from="VBox/HBox/Div/VBox/HBox/Menu/UpButton" to="." method="_on_up_button_button_down"]
[connection signal="button_down" from="VBox/HBox/Div/VBox/HBox/Menu/LeftButton" to="." method="_on_left_button_button_down"]
[connection signal="button_down" from="VBox/HBox/Div/VBox/HBox/Menu/RightButton" to="." method="_on_right_button_button_down"]
[connection signal="button_down" from="VBox/HBox/Div/VBox/HBox/Menu/DownButton" to="." method="_on_down_button_button_down"]
[connection signal="button_down" from="VBox/HBox/Div/VBox/HBox/Menu/DeleteButton" to="." method="_on_delete_button_button_down"]
